--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,6 @@
-# Mailgun Configuration
-MAILGUN_API_KEY=your_mailgun_api_key_here
-MAILGUN_DOMAIN=your_mailgun_domain_here
-MAILGUN_FROM_EMAIL=noreply@your_domain.com
-MAILGUN_URL=https://api.mailgun.net
+GMAIL_USER=pknuek23@gmail.com
+GMAIL_PASS=rauaofzmwbvumaqe
 
 # Server Configuration
 PORT=3000
 NODE_ENV=development
-
-# Example values:
-# MAILGUN_API_KEY=key-1234567890abcdef1234567890abcdef
-# MAILGUN_DOMAIN=mg.yourdomain.com
-# MAILGUN_FROM_EMAIL=petition@yourdomain.com
